--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/assets/styles/styles.scss"]
+            "styles": ["src/styles.scss"]
           }
         }
       }
